syntax = "proto3";
package types;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/keybittech/awayto-v3/go/pkg/types";

service PaymentService {
  rpc PostPayment(PostPaymentRequest) returns (PostPaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payments"
      body: "*"
    };
  }

  rpc PatchPayment(PatchPaymentRequest) returns (PatchPaymentResponse) {
    option (google.api.http) = {
      patch: "/v1/payments/{id}"
      body: "*"
    };
  }
  
  rpc GetPayments(GetPaymentsRequest) returns (GetPaymentsResponse) {
    option (google.api.http) = {
      get: "/v1/payments"
    };
  }

  rpc GetPaymentById(GetPaymentByIdRequest) returns (GetPaymentByIdResponse) {
    option (google.api.http) = {
      get: "/v1/payments/{id}"
    };
  }

  rpc DeletePayment(DeletePaymentRequest) returns (DeletePaymentResponse) {
    option (google.api.http) = {
      delete: "/v1/payments/{id}"
    };
  }

  rpc DisablePayment(DisablePaymentRequest) returns (DisablePaymentResponse) {
    option (google.api.http) = {
      patch: "/v1/payments/{id}/disable"
    };
  }
}

message PaymentDetails {
  string processingId = 1;
  string note = 2;
}

message IPayment {
  string id = 1;
  PaymentDetails details = 2;
}

message PostPaymentRequest {
  IPayment payment = 1 [(google.api.field_behavior) = REQUIRED];
}

message PostPaymentResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message PatchPaymentRequest {
  IPayment payment = 1 [(google.api.field_behavior) = REQUIRED];
}

message PatchPaymentResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetPaymentsRequest {}

message GetPaymentsResponse {
  repeated IPayment payments = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetPaymentByIdRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetPaymentByIdResponse {
  IPayment payment = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeletePaymentRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeletePaymentResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

message DisablePaymentRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DisablePaymentResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

